doc(other): complete the document

--- a/doc/交付文档.md
+++ b/doc/交付文档.md
@@ -34,7 +34,7 @@
 
 - 项目二维码：
 
-
+<div align="center"> <img src="./image/qrcode.jpg" width="30%"> </div>
 
 ## 3 产品目标
 
@@ -402,14 +402,22 @@ docker-compose up
 
 ### 7.1 功能测试
 
+- **上传**：可以实现事件、文本和数据的上传，网络良好情况下按预期进展。当网络状况较差时，系统完成对于图片上传延迟、丢失的错误处理，功能正确、
 
+- **内容显示&管理**：可以根据上传内容类型的不同，自动选取相应内容并排版。可以点击查看详细页面，功能良好
+- **计划**：可以创建、编辑修改计划和头都。会根据完成情况和时间排列todo，适应各类边缘操作。
+
+- **生成分享**：可以正常的生成时间轴、日记本、小视频和数据图，均可以保存到本地（对应不同形式）。其中前三者支持连接分享，且链接通过测试。
+
+- **用户信息管理**：创建新家庭后，可以通过验证码、分享链接加入家庭，共享编辑、家庭信息等通过功能测试。支持多孩家庭。
 
 ### 7.2 性能测试
 
 - **测试场景与参数设置**
+  
   - 场景一：用户上传事件（包含两张图片，均为200kB以上）——用户查看主页，事件线程数 500，ramp-up 设置为 50
   - 场景二：用户在生成日记本页面选择事件（2个）——用户提交事件——用户预览生成的日记本，线程数 500，ramp-up 设置为 50
-
+  
 - **测试结果**
 
   - 场景一
